--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Compiled class file
 *.class
 
+# Misc
+.idea
+*.iml
+out/
+target/
+.DS_Store
+Thumbs.db
+
 # Log file
 *.log
 
@@ -21,3 +29,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+dist
+tmp
+out-tsc
+
+# IDEs and editors
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
