--- a/info/pom.xml
+++ b/info/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.shaped</groupId>
-    <artifactId>microprofile-demo</artifactId>
+    <artifactId>microprofile-info</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -50,9 +50,14 @@
             <groupId>io.thorntail</groupId>
             <artifactId>microprofile-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>microprofile-openapi</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>infoservice</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
@@ -72,6 +77,21 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.27.2</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>docker.shaped.ch/microprofile-info</name>
+                            <build>
+                                <dockerFileDir>${project.basedir}/</dockerFileDir>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
             </plugin>
         </plugins>
     </build>
