--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - mpdemo
     ports:
       - 8180:8080
+    environment:
+      - JAEGER_SERVICE_NAME=thorntail
+      - JAEGER_REPORTER_LOG_SPANS=true 
+      - JAEGER_SAMPLER_TYPE=const
+      - JAEGER_SAMPLER_PARAM=1 
 
   prometheus:
     image: prom/prometheus
@@ -28,7 +33,9 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
-      - ./config/grafana/microprofile-metrics.json:/etc/grafana/provisioning/dashboards/microprofile-metrics.json
+      - ./config/grafana/dashboards/:/opt/dashboards
+      - ./config/grafana/custom.yaml:/etc/grafana/provisioning/dashboards/custom.yaml
+      - ./config/grafana/datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
 
   swaggerui:
     image: swaggerapi/swagger-ui
@@ -40,6 +47,16 @@ services:
     environment:
       - API_URL=http://generator.swagger.io/api/swagger.json
       - URL=http://localhost:8180/openapi
+
+  jaeger:
+    image: jaegertracing/all-in-one
+    hostname: jaeger
+    networks:
+      - mpdemo
+    ports:
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 9093:16686
 
 networks:
   mpdemo:
