--- a/info/pom.xml
+++ b/info/pom.xml
@@ -54,6 +54,14 @@
             <groupId>io.thorntail</groupId>
             <artifactId>microprofile-openapi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>microprofile-opentracing</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>jaeger</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
