--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -9,9 +9,10 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-      # - alertmanager:9093
+       - alertmanager:9093
 
 rule_files:
+- alert.rules
 
 scrape_configs:
   - job_name: 'prometheus'
